feat: allow to create keys for shares with anonymous users
